syntax = "proto3";

option go_package = "github.com/Pratham700/github-search-service/proto";

package githubsearchservice;

service GithubSearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
}

enum SortOption {
  SORT_UNSPECIFIED = 0; // Default value, often used to indicate no preference or an error
  SORT_INDEXED = 1;
}

enum OrderOption {
  ORDER_UNSPECIFIED = 0; // Default value
  ORDER_ASC = 1;
  ORDER_DESC = 2;
}

message SearchRequest {
  string search_term = 1;
  string user = 2;
  SortOption sort = 3;
  OrderOption order = 4;
  optional int32 per_page = 5;
  optional int32 page = 6;
}

message SearchResponse {
  repeated Result results = 1;
}

message Result {
  string file_url = 1;
  string repo = 2;
}